hw6-cache/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: otus-hw6-cache-app
  name: otus-hw6-cache-deployment
spec:
    replicas: 1
    selector:
       matchLabels:
          app: otus-hw6-cache-app
    template:
       metadata:
          labels:
             app: otus-hw6-cache-app
       spec:
          containers:
          - name: otus-hw6-cache
            image: evgen2sat/otus-hw6-cache:1.0.0
            ports:
              - name: web 
                containerPort: 8003
            livenessProbe:
              httpGet:
                port: 8003
                path: /health
              initialDelaySeconds: 10
              periodSeconds: 5
              timeoutSeconds: 2
            readinessProbe:
              httpGet:
                port: 8003
                path: /health
              initialDelaySeconds: 10
              periodSeconds: 5
